# SOL-PREDICT-ARENA

./: .gitattributes  .gitignore  Anchor.toml  BACKEND_TEST_SUMMARY.md  CLEANUP_SUMMARY.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  ENV_SETUP_GUIDE.md  RAILWAY_CHECKLIST.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_FIX_DATABASE_URL.md  README.md  SMART_CONTRACT_DEPLOYED.md  TEST_IMPLEMENTATION_SUMMARY.md  VERCEL_DEPLOYMENT_FIXED.md  VERCEL_ENV_SETUP.md  package.json  playground-files.txt  tsconfig.json  vercel.json
.github/workflows/: playwright.yml
backend/: .env.example  .env.production  .gitignore  API_DOCUMENTATION.md  API_TEST_RESULTS.md  DATABASE_MIGRATION_SUMMARY.md  MIGRATION_GUIDE.md  PRODUCTION_MIGRATION_CHECKLIST.md  README.md  package.json  pnpm-lock.yaml  railway.json  test-all-endpoints.sh  test-deployment.sh  tsconfig.json
backend/docs/: PYTH_SERVICE.md
backend/prisma/: README.md  schema.prisma  seed.ts
backend/src/: index.ts
backend/src/lib/: prisma.ts  (+1 more)
frontend/: .env.example  .env.production  .eslintrc.cjs  .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
programs/sol_predict_arena/: Cargo.toml
programs/sol_predict_arena/src/: errors.rs  lib.rs  state.rs
programs/sol_predict_arena/src/instructions/: award_badge.rs  end_season.rs  initialize_player.rs  initialize_season.rs  mod.rs  update_leaderboard.rs  update_season_points.rs  update_stats.rs
tests/: TEST_GUIDE.md  sol_predict_arena.ts
(+63 files in other folders)
